se actualiza application.properties con configuración de mysql

--- a/calendar-service/application.properties
+++ b/calendar-service/application.properties
@@ -1,2 +1,4 @@
-calendar.locale=ES
-calendar.timezone=America/Santiago
+datasource.url=jdbc:mysql://arkho-falp.ccpphjozm3os.us-east-1.rds.amazonaws.com:3306/calendars
+spring.datasource.username=caluser
+spring.datasource.password=caluser
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
