Revert "se actualiza application.properties con configuración de mysql"
This reverts commit 5257f6c90c8eb1cf234efca59d7e04d24307e97f.

--- a/calendar-service/application.properties
+++ b/calendar-service/application.properties
@@ -1,4 +1,2 @@
-datasource.url=jdbc:mysql://arkho-falp.ccpphjozm3os.us-east-1.rds.amazonaws.com:3306/calendars
-spring.datasource.username=caluser
-spring.datasource.password=caluser
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+calendar.locale=ES
+calendar.timezone=America/Santiago
